Terminal overflow fix

--- a/src/Sass/components/_terminal.scss
+++ b/src/Sass/components/_terminal.scss
@@ -14,6 +14,7 @@
     width: 40%;
     height: 40%;
     overflow-y: scroll;
+    overflow-x: hidden;
     color: $pale-white;
 
     background-color: $primary-background-color;
@@ -49,6 +50,7 @@
         background-color: $primary-background-color;
         color: $pale-white;
         margin-left: 4px;
+        margin-right: 2px;
     }
     .command-container, .terminal-input-content, .terminal-input {
         margin-top: 0;
